src/objects/Case_Item__c.object
<CustomObject>
    <description>Used to track tasks to be performed on single topic.</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Work_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClosedReason__c</fullName>
        <globalPicklist>Closed_Reason</globalPicklist>
        <label>Closed Reason</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check box when work item is complete</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolvedBy__c</fullName>
        <formula>IF(   Resolved__c   ,   LastModifiedBy.FirstName   &amp; &apos; &apos; &amp;  LastModifiedBy.LastName, null )</formula>
        <label>Resolved By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolvedDate__c</fullName>
        <formula>IF( Resolved__c , (LastModifiedDate) , null )</formula>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresolved</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Name__c</fullName>
        <label>Webservice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webservice_Parameters__c</fullName>
        <label>Webservice Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case Item</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Case Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>